fix ancho navBar2. elimino 'overflow-x: hidden'

--- a/src/css/style_catalog.css
+++ b/src/css/style_catalog.css
@@ -1,7 +1,7 @@
 html,
-body {
+/* body {
   overflow-x: hidden;
-}
+} */
 
 main {
   margin-bottom: 3em;
