--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,7 @@
 /* Evitar barra de scroll lateral en toda la web */
-body {
+/* body {
   overflow-x: hidden;
-}
+} */
 
 
 
@@ -21,15 +21,12 @@ body {
   box-shadow: none;
   z-index: 5;
   position: relative;
-  width: 100vw;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
+  width: 100%;
   padding: 0;
   top: 0;
   margin-top: -1px;
   margin-bottom: 0rem;
+  /* Sin márgenes negativos ni width 100vw */
   overflow-x: hidden;
   overflow-y: hidden;
   /* Evita scroll vertical en la barra secundaria */
